--- a/morechat-client/src/main/resources/chat.fxml
+++ b/morechat-client/src/main/resources/chat.fxml
@@ -16,6 +16,7 @@
 <?import javafx.scene.text.Font?>
 
 <?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.CheckBox?>
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0"
             prefWidth="800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="org.emamotor.morechat.client.ChatClientController">
@@ -39,6 +40,9 @@
         <Separator orientation="VERTICAL" prefHeight="50.0" visible="false"/>
         <Label text="Voice"/>
         <ChoiceBox fx:id="voicePatterns" prefWidth="150.0"/>
+        <Separator orientation="VERTICAL" prefHeight="25.0" visible="false"/>
+        <Label text="Mute My Voice "/>
+        <CheckBox fx:id="muteMyVoice"/>
         <Separator orientation="VERTICAL" prefHeight="50.0" visible="false"/>
         <Button fx:id="connect" mnemonicParsing="false" text="Connect"/>
       </children>
